# capybase-repo

./: .gitignore  .gitmodules  AGENTS.md  NOTICE  README.md  capybase-concat.txt  capybase.toml  pyproject.toml  setup.py
.zcode/plans/: plan-sess_aebff4b7-d2fe-43c7-8d55-98995db0a368.md
calibration-profiles/: e2b.json  vt3b.json
docs/: PROMPT_FACTORS.md  deterministic-resolution.md  drift-detector-review.md  jury-enforcement-deliverable.md  rust_impl-escalation-review.md
downloads/: .gitignore
external-datasets/: .gitignore
extracted-testdata/: .gitignore
scripts/: __init__.py  export-lora-dataset.py  export-session-testdata.py  fetch_mergeconflict_datasets.py  fit_calibration.py  live_eval.py  live_eval_realworld.py  mine_rebase_scenarios.py  replay_jury.py  run-live-test.sh  seed_memory.py
src/capybase/: __init__.py  __main__.py  _cdiff.c  accept_report.py  branch_intent.py  calibration.py  calibration_corpus.py  calibration_design.py  calibration_profile.py  classifier.py  cli.py  color.py  comment_claims.py  comment_reconciler.py  comment_verifiers.py  config.py  conflict_chain.py  conflict_extractor.py  conflict_model.py  consensus.py  context_builder.py  cross_commit.py  diff.py  drift.py  dryrun.py  embeddings_calibration.py  embeddings_corpus.py  escalation.py  exact_reuse.py  future_obligations.py  git_backend.py  history.py  history_confidence.py  journal.py  jury_benchmark.py  jury_enforce.py  jury_evidence.py  jury_replay.py  logging_setup.py  merge_intent.py  (+23 more)
src/capybase/adapters/: __init__.py  abstract_parser.py  comment_classifier.py  docstring_parser.py  git_diff3.py  language.py  llm_openai.py  lsp.py  parsers.py  separator_projection.py  string_lexer.py  structural.py  structural_context.py  structural_diff.py  tests.py
src/capybase/memory/: __init__.py  embeddings.py  retriever.py  shape.py  store.py  vector_index.py
tests/: _realworld_cargo.py  conftest.py  multistep_builder.py  realworld_loader.py  rebase_scenario_loader.py  regression_loader.py  rust_conflict_catalog.py  rust_corpus_coverage.md  rust_mutation_generator.py  session_loader.py  test_abstract_parser.py  test_accept_report.py  test_adaptive_probe.py  test_advisory_events.py  test_backup.py  test_block_capture.py  test_branch_intent.py  test_calibration.py  test_calibration_corpus.py  test_calibration_design.py  test_calibration_profile.py  test_change_type_budget.py  test_check_command.py  test_classifier.py  test_cli_calibrate.py  test_cli_calibrate_embeddings.py  test_clippy.py  test_color.py  test_comment_claims.py  test_comment_classifier.py  test_comment_integration.py  test_comment_masking_wired.py  test_comment_reconciler.py  test_comment_spans.py  test_comment_verifiers.py  test_config_dir.py  test_conflict_chain.py  test_conflict_extractor.py  test_conflict_features.py  test_consensus.py  (+121 more)
tests/fixtures/regression/: py-both-modify-same-line.json  py-broken-candidate-escalates.json  py-list-combine.json  py-modify-delete-keeper-wins.json  rust-struct-fields.json
