[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capybase"
version = "0.1.0"
description = "A rebase-conflict resolution agent with research-grade seams."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "panz-r" }]
dependencies = [
    "pydantic>=2.5",
]

[project.optional-dependencies]
# Structural analysis (Pillar 1): AST parsing + preservation checks for Python
# AND Rust. Lazy-imported at runtime; capybase works without these but degrades
# to the line-window context and skips AST-level validation when they are absent.
# Included in `dev` so a development install lights up Rust structural context,
# entity-level merge, AST-preservation, and sibling-entity resolution by default.
structural = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-rust>=0.23",
]
dev = [
    "pytest>=7",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-rust>=0.23",
]

[project.scripts]
capybase = "capybase.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

# NOTE: runtime configuration (model, policy, tests, validation, journal, future)
# lives in capybase.toml, not here. pyproject.toml is packaging metadata only.
